--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome to <%= Rails.configuration.application_name %>!</h1>
-<p class="lead">Use this document as a way to quickly start any new project by generating files, installing gems, and more. </p>
+#<h1>Welcome to <%= Rails.configuration.application_name %>!</h1>
+#<p class="lead">Use this document as a way to quickly start any new project by generating files, installing gems, and more. </p>
